*
* 1.2.17
*

- New DCI source: NXSL script executed on server
- Management console:
    - Can show alarms for multiple selected objects
    - Fixed non-working ordering in event list in alarm details view
    - Fixed bug with LDAP user system rights
    - Added device geolocation tracking and display on map 
- Android console:
	- Fix bug in notifying connection point not found
	- Fix bug in computing interface expanded list size (removed hardcoded values)
	- Added manage, unmanage, set expected state (up, down, ignore) and find switch port to interface list
	- Fix aesthetic problems in expandable list (graphs and interfaces list)
	- Integration of new support library
	- Target to new API version (20)
- Fixed issues: #542, #593, #613, #624, #626, #632, #635, #639


*
* 1.2.16
*

- Fixed database upgrade issues
- Fixed packaging issues
- Fixed bug causing outdated peer information on interface objects
- Fixed bug with upload to agent default path from server file store
- Instance display name for DCIs created via instance discovery
- DCIs created via instance discovery can be combined by instance into one chart on performance tab
- Transformation script terminated by "abort" call will not generate SYS_SCRIPT_ERROR event
- Database manager can detect and fix missing IData and TData tables
- NXSL:
   - String concatenation operation interprets NULL value as empty string instead of throwing runtime error
   - Fixed incorrect processing of ilike, match, and imatch operators
   - Added try / catch operator
- New MIBs added: NETUP-MIB
- Fixed issues: #424, #463, #543, #618, #619, #620


*
* 1.2.15
*

- LDAP support
- Event names support in nxevent
- Previous state parameter added to SYS_NODE_UP event 
- Added file management subagent (filemgr.nsm) 
- Removed agent configuration parameter EnableArbitraryFileUpload
- New NXSL class "Zone"
- New attributes "zone" and "zoneId" in NXSL classes "Node" and "Interface"
- Syslog records from unmanaged nodes do not generate events